--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     width: 250px;
-    border: 3px solid #ffffff
+    border: 10px dashed #ffffff
 }
 
 div{
@@ -38,6 +38,7 @@ div{
 }
 
 .introduction {
+    border: 3px solid #ffffff;
     border-radius: 15px;
     margin-top: 15px;
     line-height: 2;
@@ -52,44 +53,63 @@ div{
 }
 
 .blue {
-    background-color: #0000FF;
-    color: #C4C4C4;
-    text-align: left;
+    min-height: 125px;
     margin-right: 50px;
     border-right: 5px;
     border-top: 2px;
+    background-color: #0000FF;
+    color: #C4C4C4;
+    text-align: left;
+    font-size: 24px;
+    padding: 10px 0px 0px 10px;
+    display: block;
+    border-style: solid;
+
 }
 
-h2.blue {
+.blue h2 {
     color: #C4C4C4;
+    font-size: 30px;
+    padding: 10px 0px 0px 10px;
+    display: block;
 }
 
 
 .yellow {
+    min-height: 125px;
     background-color: #FFFF00;
     color: #707070;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    padding: 20px;
+    border-left: 5px solid #ffffff;
+    border-bottom: 2px solid #ffffff;
+}
+
+.yellow p {
+    color: #707070;
+    padding: 10px 0px 0px 10px;
+
 }
 
 .green {
-    background-color: #00EB00;
+    min-height: 125px;
+    padding: 20px;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right: 5px solid;
+    border-top: 2px solid;
 }
 
 footer{
-    background-image: linear-gradient(to right, #000000, #0066ff 25%, #0066ff 70%, #000000);
+    background-image: linear-gradient(to right, #000000, #0000ff 25%, #0066ff 70%, #000000);
     border: 5px solid #ffffff;
 }
 
-footer p {
+footer > p {
     font-size: 20px;
-    text-align: right;
+    text-align: center;
     padding: 15px 15px 15px 0px;
 }
 
