--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,10 @@ div{
 .red {
     background-color: #ff0000;
     text-align: right;
+    padding: 20px;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-bottom: 2px solid;
+    border-left: 5px solid;
 }
 
 .blue {
@@ -61,7 +62,7 @@ div{
     color: #C4C4C4;
     text-align: left;
     font-size: 24px;
-    padding: 10px 0px 0px 10px;
+    padding: 20px;
     display: block;
     border-style: solid;
 
@@ -109,7 +110,7 @@ footer{
 
 footer > p {
     font-size: 20px;
-    text-align: center;
+    text-align: right;
     padding: 15px 15px 15px 0px;
 }
 
