--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ footer{
     border: 5px solid #ffffff;
 }
 
-footer > p {
+footer p {
     font-size: 20px;
     text-align: right;
     padding: 15px 15px 15px 0px;
