--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ div{
     background-color: #ff0000;
     text-align: right;
     padding: 20px;
-    margin-left: 50px;
+    margin: 20px 20px 0px 50px;
     border-bottom: 2px solid;
     border-left: 5px solid;
 }
